@@ -674,6 +674,9 @@ CREATE TABLE history_log (
   id			serial,
   itemid                int4            DEFAULT '0' NOT NULL,
   clock                 int4            DEFAULT '0' NOT NULL,
+  timestamp		int4		DEFAULT '0' NOT NULL,
+  source		varchar(64)	DEFAULT '' NOT NULL,
+  severity		int4		DEFAULT '0' NOT NULL,
   value                 varchar(255)    DEFAULT '' NOT NULL,
   PRIMARY KEY (id),
   FOREIGN KEY (itemid) REFERENCES items
